@@ -1,4 +1,4 @@
 EYEDB_MAJOR_VERSION=2
 EYEDB_MINOR_VERSION=7
 EYEDB_PATCH_VERSION=6
-EYEDB_VERSION_STATUS=beta
+EYEDB_VERSION_STATUS=-beta
